--- a/public/app/controllers/front.controller.jade
+++ b/public/app/controllers/front.controller.jade
@@ -1,9 +1,9 @@
 div(front-controller='', a-trianglify='', data-colors='Greens')
-  //- .container(style='text-align:center')
+  .container(style='text-align:center')
     //- word-art(data-text='rangers town') test keyword
-    //- game-package(data-user='vm.user')  
+    game-package(data-user='vm.user')  
   
-  .container
+  //- .container
     playing-card.card-lg.card-open.card-suit-s.card-rank-a
     playing-card.card-xl.card-open.card-suit-d.card-rank-10
     div(style='position:absolute;top:300px;left:200px')
