--- a/public/app/controllers/sample-layout.controller.jade
+++ b/public/app/controllers/sample-layout.controller.jade
@@ -2,7 +2,7 @@ div(sample-layout-controller='')
   .container
 
     //- PLAYER GUIDE
-    .panel.panel-primary
+    //- .panel.panel-primary
       .panel-heading
         strong PLAYER (RANGER + ITEM)
       .panel-body
