--- a/public/app/directives/frame-alt.directive.scss
+++ b/public/app/directives/frame-alt.directive.scss
@@ -1,7 +1,157 @@
-$item-size-ratio: 2.5;
-$size-sm: 84px;
-$size-md: 112px;
-$size-lg: 150px;
-$size-xl: 200px;
+@charset "utf-8";
 
+$frame-sizes: (sm: (frame-width: 740px, frame-height: 705px, frame-padding: 40px), md: (frame-width: 840px, frame-height: 705px, frame-padding: 40px), lg: (frame-width: 940px, frame-height: 705px, frame-padding: 40px), xl: (frame-width: 1040px, frame-height: 705px, frame-padding: 40px), xxl: (frame-width: 1140px, frame-height: 705px, frame-padding: 40px));
 
+$player-sizes: (sm: (width: 84px), md: (width: 112px), lg: (width: 150px), xl: (width: 200px));
+
+$player-indexes: 1 2 3 -3 -2 -1;
+
+@function player-position($frame-prop, $player-prop, $num-of-player, $player-index) {
+    $top: 0;
+    $left: 0;
+    $opacity: 1;
+    $frame-width: map-get($frame-prop, frame-width);
+    $frame-height: map-get($frame-prop, frame-height);
+    $frame-padding: map-get($frame-prop, frame-padding);
+    $player-width: map-get($player-prop, width) * 1.7;
+    @if $num-of-player == 6 {
+        $n: 5;
+        $margin: ($frame-width - $frame-padding * 2 - $player-width * $n) / ($n - 1);
+        $gap: $player-width + $margin;
+        @if $player-index == 1 {
+            $top: $frame-padding * 3;
+            $left: $frame-padding + $player-width * 0.5;
+        }
+        @else if $player-index == 2 {
+            $top: $frame-padding;
+            $left: $frame-padding + $player-width * 0.5 + $gap;
+        }
+        @else if $player-index == 3 {
+            $top: $frame-padding;
+            $left: $frame-padding + $player-width * 0.5 + $gap * 2;
+        }
+        @else if $player-index == -2 {
+            $top: $frame-padding;
+            $left: $frame-padding + $player-width * 0.5 + $gap * 3;
+        }
+        @else if $player-index == -1 {
+            $top: $frame-padding * 3;
+            $left: $frame-padding + $player-width * 0.5 + $gap * 4;
+        }
+    }    @if $num-of-player == 5 {
+        $n: 4;
+        $margin: ($frame-width - $frame-padding * 2 - $player-width * $n) / ($n - 1);
+        $gap: $player-width + $margin;
+        @if $player-index == 1 {
+            $top: $frame-padding * 3;
+            $left: $frame-padding + $player-width * 0.5;
+        }
+        @else if $player-index == 2 {
+            $top: $frame-padding;
+            $left: $frame-padding + $player-width * 0.5 + $gap;
+        }
+        @else if $player-index == -2 {
+            $top: $frame-padding;
+            $left: $frame-padding + $player-width * 0.5 + $gap * 2;
+        }
+        @else if $player-index == -1 {
+            $top: $frame-padding * 3;
+            $left: $frame-padding + $player-width * 0.5 + $gap * 3;
+        }
+    }
+    @if $num-of-player == 4 {
+        $n: 3;
+        $margin: ($frame-width - $frame-padding * 2 - $player-width * $n) / ($n - 1);
+        $gap: $player-width + $margin;
+        @if $player-index == 1 {
+            $top: $frame-padding * 3;
+            $left: $frame-padding + $player-width * 0.5;
+        }
+        @else if $player-index == 2 {
+            $top: $frame-padding;
+            $left: $frame-padding + $player-width * 0.5 + $gap;
+        }
+        @else if $player-index == -2 {
+            $opacity: 0;
+        }
+        @else if $player-index == -1 {
+            $top: $frame-padding * 3;
+            $left: $frame-padding + $player-width * 0.5 + $gap * 2;
+        }
+    }
+    @if $num-of-player == 3 {
+        $n: 2;
+        $margin: ($frame-width - $frame-padding * 2 - $player-width * $n) / ($n - 1);
+        $gap: $player-width + $margin;
+        @if $player-index == 1 {
+            $top: $frame-padding;
+            $left: $frame-padding + $player-width * 0.5;
+        }
+        @else if $player-index == 2 {
+            $opacity: 0;
+        }
+        @else if $player-index == -2 {
+            $opacity: 0;
+        }
+        @else if $player-index == -1 {
+            $top: $frame-padding;
+            $left: $frame-padding + $player-width * 0.5 + $gap;
+        }
+    }
+    @if $num-of-player == 2 {
+        @if $player-index == 1 {
+            $top: $frame-padding;
+            $left: 50%;
+        }
+        @else if $player-index == 2 {
+            $opacity: 0;
+        }
+        @else if $player-index == -2 {
+            $opacity: 0;
+        }
+        @else if $player-index == -1 {
+            $opacity: 0;
+        }
+    }
+    @return (top: $top, left: $left, opacity: $opacity);
+}
+
+@mixin player-position($frame-prop, $player-prop, $num-of-player, $player-index) {
+    $position: player-position($frame-prop, $player-prop, $num-of-player, $player-index);
+    $opacity: map-get($position, opacity);
+    top: round(map-get($position, top));
+    left: round(map-get($position, left));
+    @if $opacity == 0 {
+        opacity: $opacity;
+        pointer-events: none;
+    }
+}
+
+.frame {
+    @each $frame-size, $frame-prop in $frame-sizes {
+        &.frame-#{$frame-size} {
+            position: relative;
+            width: map-get($frame-prop, frame-width);
+            height: map-get($frame-prop, frame-height);
+            border: 1px dashed black;
+            @for $num-of-player from 2 through 6 {
+                &.frame-#{$num-of-player} {
+                    .player {
+                        position: absolute;
+                        @each $player-size, $player-prop in $player-sizes {
+                            &.player-#{$player-size} {
+                                $player-width: map-get($player-prop, width) * 1.7;
+                                margin-left: $player-width * -0.5;
+                                @each $player-index in $player-indexes {
+                                    &.player#{$player-index} {
+                                        @include player-position($frame-prop, $player-prop, $num-of-player, $player-index);
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
