--- a/public/app/directives/frame.directive.scss
+++ b/public/app/directives/frame.directive.scss
@@ -4,7 +4,7 @@ $size-md: 112px;
 $size-lg: 150px;
 $size-xl: 200px;
 
-.frame {
+.frame-dp {
     &.frame-sm {
         $frame-width: 740px;
         $frame-height: 705px;
@@ -2045,7 +2045,7 @@ $size-xl: 200px;
     }
 }
 
-.frame {
+.fr1ame {
     $frame-width: 940px;
     $frame-height: 705px;
     $frame-padding: 40px;
