--- a/games/mighty/view/mighty.controller.scss
+++ b/games/mighty/view/mighty.controller.scss
@@ -24,7 +24,7 @@
      }
         
     }
-    .player {
+/*    .player {
         position: absolute !important;
         transition: all 1s linear !important;
     }
@@ -32,6 +32,6 @@
     .player0 {
         display:none;
     }
-
+*/
 
 }
