--- a/games/mighty/view/mighty.controller.jade
+++ b/games/mighty/view/mighty.controller.jade
@@ -7,7 +7,7 @@ div(game-mighty-controller='', tyle='background-image:url(/assets/stages/{{ vm.s
   
       //- .ranger-me
 
-      .player.player-horizontal.player-xl.player-me.player-md
+      //- .player.player-horizontal.player-xl.player-me.player-md
         .ranger-wrap
 
           //- h3.score(ng-if='vm.me_.rank < 4', class='r{{ vm.me_.rank }}') {{ vm.me_.rankStr }}
@@ -19,8 +19,8 @@ div(game-mighty-controller='', tyle='background-image:url(/assets/stages/{{ vm.s
 
       //- 다른 레인저들
       .others
-        .player.player-md.animated.lightSpeedIn(ng-repeat='player in vm.data.players track by player._id | orderBy : _index',
-          g-if='player.client.id !== vm.me.id',
+        .player.player-md(ng-repeat='player in vm.data.players track by player._id | orderBy : _index',
+          ng-if='player.client.id !== vm.me.id',
           class='player{{ player._index }}')
           .ranger-wrap
             h3 {{ player._index }}
